--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -11,10 +11,15 @@
         <input class="form-control"
                type="text"
                name="name"
+               [class.is-invalid]="name.invalid && name.touched"
                [ngModel]="user.name"
                placeholder="Nombre"
-               required>
-      </div>
+               required
+               minlength="5"
+               #name="ngModel"
+               />
+        <small *ngIf="name.invalid && name.touched" class="form-text text-danger">El nombre es OBLIGATORIO</small>
+    </div>
     </div>
 
     <div class="form-group row">
@@ -24,10 +29,15 @@
         <input class="form-control"
                type="text"
                name="lastName"
+               [class.is-invalid]="lastName.invalid && lastName.touched"
                [ngModel]="user.lastName"
                placeholder="Apellido"
-               required>
-      </div>
+               minlength="5"
+               required
+               #lastName="ngModel"
+               />
+        <small *ngIf="lastName.invalid && lastName.touched" class="form-text text-danger">El apellido es OBLIGATORIO</small>
+    </div>
     </div>
 
   </div>
@@ -39,9 +49,14 @@
       <input class="form-control"
              type="email"
              name="email"
+             [ngClass]="{'is-invalid': email.invalid && email.touched}"
              [ngModel]="user.email"
              placeholder="Correo electrónico"
-             required>
+             pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
+             required
+             #email="ngModel"
+             />
+      <small *ngIf="email.invalid && email.touched" class="form-text text-danger">El correo es OBLIGATORIO</small>
     </div>
   </div>
 
