--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -60,6 +60,66 @@
     </div>
   </div>
 
+  <div class="form-group row">
+    <label class="col-2 col-form-label">País</label>
+    <div class="col-8">
+      <select class="form-control" 
+              name="country" 
+              [class.is-invalid]="country.invalid && country.touched"
+              [disabled]="countries.length === 0" 
+              [ngModel]="user.country" 
+              required
+              #country="ngModel">
+        <option *ngFor="let country of countries" 
+                [value]="country.code">
+          {{ country.name }}
+        </option>
+      </select>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Genero</label>
+    <div class="col-8">
+      <div class="form-check form-check-inline">
+        <input class="form-check-input"
+              type="radio" 
+              name="gender"
+              value="male"
+              [class.is-invalid]="gender.invalid && gender.touched"
+              [ngModel]="user.gender"
+              required
+              #gender="ngModel"
+        />
+        <label for="" class="form-check-label">Masculino</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input"
+              type="radio"
+              name="gender"
+              value="female"
+              [class.is-invalid]="gender.invalid && gender.touched" 
+              [ngModel]="user.gender"
+              required
+              #gender="ngModel"
+        />
+        <label for="" class="form-check-label">Femenino</label>
+      </div>
+      <div class="form-check form-check-inline">
+        <input class="form-check-input"
+              type="radio" 
+              name="gender"
+              value="strainer"
+              [class.is-invalid]="gender.invalid && gender.touched"
+              [ngModel]="user.gender"
+              required
+              #gender="ngModel"
+        />
+        <label for="" class="form-check-label">Un colador</label>
+      </div>
+    </div>
+  </div>
+
 
 
   <div class="form-group row">
