Manejo del formulario del lado del componente, y no del template

--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -1,6 +1,6 @@
 <h4>Formularios <small>Reactive</small></h4>
 <hr>
-<form autocomplete="off">
+<form autocomplete="off" [formGroup]="form" (ngSubmit)="save()">
 
   <div>
 
@@ -9,18 +9,27 @@
       <div class="col-8">
 
         <input class="form-control"
-               type="text"
-               placeholder="Nombre">
+              [class.is-invalid]="nameNotValid()"
+              type="text"
+              placeholder="Nombre"
+              formControlName="name">
+        <small class="text-danger form-text" *ngIf="nameNotValid()">
+          Ta mal
+        </small>
       </div>
     </div>
 
     <div class="form-group row">
       <label class="col-2 col-form-label">Apellido</label>
       <div class="col-8">
-
         <input class="form-control"
-               type="text"
-               placeholder="Apellido">
+              [class.is-invalid]="lastNameNotValid()"
+              type="text"
+              placeholder="Apellido"
+              formControlName="lastName">
+        <small class="text-danger form-text" *ngIf="lastNameNotValid()">
+          Ta mal
+        </small>
       </div>
     </div>
 
@@ -31,8 +40,13 @@
     <div class="col-8">
 
       <input class="form-control"
-             type="email"
-             placeholder="Correo electrónico">
+            [class.is-invalid]="emailNotValid()"
+            type="email"
+            placeholder="Correo electrónico"
+            formControlName="email">
+      <small class="text-danger form-text" *ngIf="emailNotValid()">
+        Ta mal
+      </small>
     </div>
   </div>
 
@@ -48,3 +62,14 @@
   </div>
 
 </form>
+
+<hr />
+<pre>
+  Estado del formulario: {{ form.valid }}
+  <br />
+  Status: {{ form.status }}
+</pre>
+
+<pre>
+  {{ form.value | json }}
+</pre>
