--- a/src/app/pages/template/template.component.html
+++ b/src/app/pages/template/template.component.html
@@ -52,7 +52,7 @@
              [ngClass]="{'is-invalid': email.invalid && email.touched}"
              [ngModel]="user.email"
              placeholder="Correo electrónico"
-             pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
+             pattern="^[a-z0-9._%+-]+@[a-z0-9-]+[.]+[a-z]{2,3}$"
              required
              #email="ngModel"
              />
