--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -1,6 +1,6 @@
 <h4>Formularios <small>Reactive</small></h4>
 <hr>
-<form autocomplete="off" [formGroup]="form" (ngSubmit)="save()">
+<form autocomplete="off" [formGroup]="form" (ngSubmit)="saveFormGroup()">
 
   <div>
 
@@ -9,11 +9,11 @@
       <div class="col-8">
 
         <input class="form-control"
-              [class.is-invalid]="nameNotValid()"
+              [class.is-invalid]="nameNotValid"
               type="text"
               placeholder="Nombre"
               formControlName="name">
-        <small class="text-danger form-text" *ngIf="nameNotValid()">
+        <small class="text-danger form-text" *ngIf="nameNotValid">
           Ta mal
         </small>
       </div>
@@ -23,11 +23,11 @@
       <label class="col-2 col-form-label">Apellido</label>
       <div class="col-8">
         <input class="form-control"
-              [class.is-invalid]="lastNameNotValid()"
+              [class.is-invalid]="lastNameNotValid"
               type="text"
-              placeholder="Apellido"
+              placeholder="Apellido (cualquiera menos Fernandez)"
               formControlName="lastName">
-        <small class="text-danger form-text" *ngIf="lastNameNotValid()">
+        <small class="text-danger form-text" *ngIf="lastNameNotValid">
           Ta mal
         </small>
       </div>
@@ -38,19 +38,95 @@
   <div class="form-group row">
     <label class="col-2 col-form-label">Correo</label>
     <div class="col-8">
-
+      
       <input class="form-control"
-            [class.is-invalid]="emailNotValid()"
+            [class.is-invalid]="emailNotValid"
             type="email"
             placeholder="Correo electrónico"
             formControlName="email">
-      <small class="text-danger form-text" *ngIf="emailNotValid()">
+      <small class="text-danger form-text" *ngIf="emailNotValid">
         Ta mal
       </small>
     </div>
   </div>
+  
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Contraseña</label>
+    <div class="col-8">
+      <input class="form-control"
+             type="password"
+             placeholder="Contraseña"
+             formControlName="password1"
+             [class.is-invalid]="password1NotValid">
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Repetir Contraseña</label>
+    <div class="col-8">
+      <input class="form-control"
+             type="password"
+             placeholder="Repetir contraseña"
+             formControlName="password2"
+             [class.is-invalid]="password2NotValid">
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-2 col-form-label">Dirección</label>
+    <div class="col-8">
+      <div class="form-row col" formGroupName="address">
+        <input class="form-control col"
+        [class.is-invalid]="districtNotValid"
+        type="text"
+        placeholder="Distrito"
+        formControlName="district">
+        <input class="form-control col"
+              [class.is-invalid]="cityNotValid"
+              type="text"
+              placeholder="Ciudad"
+              formControlName="city">
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th>ID</th>
+            <th>Pasatiempo</th>
+            <th>Borrar</th>
+          </tr>
+        </thead>
+        <tbody formArrayName="hobbies">
+          <tr *ngFor="let control of hobbies.controls; let i = index">
+            <td>{{ i + 1 }}</td>
+            <td>
+              <input class="form-control"
+                     type="text"
+                     [formControlName]="i"/>
+            </td>
+            <td>
+              <button class="btn btn-danger"
+                      (click)="deleteHobby(i)">
+                Borrar
+              </button>
+            </td>
+          </tr>
+        </tbody>
+
+      </table>
 
 
+      <button class="btn btn-primary mt-3 mb-5 btn-block"
+              type="button"
+              (click)="addHobby()">
+        + Agregar
+      </button>
+    </div>
+  </div>
 
   <div class="form-group row">
     <label class="col-2 col-form-label">&nbsp;</label>
