--- a/src/app/pages/reactive/reactive.component.html
+++ b/src/app/pages/reactive/reactive.component.html
@@ -51,6 +51,17 @@
   </div>
   
   <div class="form-group row">
+    <label class="col-2 col-form-label">Nombre de usuario</label>
+    <div class="col-8">
+      <input class="form-control"
+             type="text"
+             placeholder="Nombre de usuario (no puede ser luca (no intente escribir eso (por favor)))"
+             formControlName="username"
+             [class.is-invalid]="usernameNotValid">
+    </div>
+  </div>
+
+  <div class="form-group row">
     <label class="col-2 col-form-label">Contraseña</label>
     <div class="col-8">
       <input class="form-control"
